--- a/001 esercizio/css/style.css
+++ b/001 esercizio/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 header {
     align-items: center;
-    max-width: 1100px;
+    /*  max-width: 1100px; */ 
     
     margin: 48px auto;
     margin-top: 0px;
@@ -14,13 +14,13 @@ header {
 }
 
 main{
-    max-width: 1100px;
+   /*  max-width: 1100px; */
     margin: 48px auto;
     margin-top: 0px;
 }
 footer{
-    max-width: 1100px;
-    margin: 48px auto;
+   /*  max-width: 1100px; */
+    margin: 0 auto;
     margin-top: 0px;
 }
 
@@ -37,6 +37,7 @@ nav{
     
     width: 26%;
     align-self: center;
+    margin: 0 auto;
     
 }
 .navbar__logo img{
@@ -45,12 +46,13 @@ nav{
 
 }
 .navbar__menu{
-   
+   margin-right: auto;
     width: 69%;
     vertical-align: top;
     text-align: right;
     
 }
+
 .navbar__menu li{
     display: inline; 
    margin: 0 10px;
@@ -79,17 +81,37 @@ nav{
 }
 .section-white-small{
     color: #9C93FF;
-    padding: 30px 210px 15px 210px;
-    
+    /* display: flex; */
+    padding: 30px 80px;   
+    padding-bottom: 0px; 
 }
+
+.section-white-small p{
+    /* display: flex;
+    width: 60%; */
+    padding-top: 0;
+    padding-left: 20px;
+    margin-top: 0;
+}
+
 
 .subsribe__button{
 
-    height: 110px;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
 
+}
+
+.subsribe {
+    background: #9C93FF;
+    text-align: center;
+    color: #fff;
+    padding: 22px 0;
+}
+.subsribe h3{
+    text-transform:uppercase;
 }
 
 .button{
@@ -109,16 +131,11 @@ nav{
 
 }
 
-.subscribe__img{
-    display: flex;
-    width: 100%;
-    vertical-align: top;
-    
-}
-.subscribe__img img{
-    display: block;
+
+.section-white__img img{
+    /* display: block; */
     margin: auto; 
-   width: 100%;
+    width: 100%;
 
 }
 
@@ -129,7 +146,7 @@ nav{
 }
 
 .footer__img{
-   
+    margin: 0 auto;
     width: 26%;
     align-self: center;
     
@@ -174,5 +191,22 @@ a{
     .footer__list li{
         display: flex;
         flex-direction: row;
+    }
+  }
+
+  @media only screen and (min-width: 900px) {
+    .section-white-small {
+        display: flex;
+    }
+
+    .section-white__text{
+        display: flex;
+        width: 60%; 
+    }
+
+    .section-white__img{
+        /* display: flex;
+        vertical-align: top; */
+        width: 40%;
     }
   }
