--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,13 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 450px;
+    margin: 0 auto;
+}
 
+.subsribe h3{
+    max-width: 450px;
+    margin: 0 auto;
 }
 .title h1{
     text-align: left;
@@ -71,31 +77,39 @@ nav{
 .section-purple{
     background-color: #9C93FF;
     color:white;
-    padding: 30px 80px;
+    padding: 30px 20px;
+    max-width: 100%;
 
 }
 
 .section-white{
     color: #9C93FF;
-    padding: 15px 80px 30px 80px;
+    padding: 15px 0px 30px 00px;
 }
 .section-white-small{
     color: #9C93FF;
     /* display: flex; */
-    padding: 30px 80px;   
+    padding: 30px 0;   
     padding-bottom: 0px; 
+    
+}
+
+.section-white-small {
+    padding: 30px 0 15px 0;
+    display: block;
+    max-width: 550px;
+    margin: 0 auto;
 }
 
 .section-white-small p{
     /* display: flex;
     width: 60%; */
-    padding-top: 0;
-    padding-left: 20px;
+    padding: 0;
     margin-top: 0;
 }
 
 
-.subsribe__button{
+.subsribe__button {
 
     height: 70px;
     display: flex;
@@ -110,11 +124,11 @@ nav{
     color: #fff;
     padding: 22px 0;
 }
-.subsribe h3{
+.subsribe h3 {
     text-transform:uppercase;
 }
 
-.button{
+.button {
     background-color: #c1c1c1;
     padding: 10px 50px;
     font-size: 20px;
@@ -139,7 +153,7 @@ nav{
 
 }
 
-.footer{
+.footer {
     display: flex;
     background-color: #c1c1c1;
 
@@ -174,7 +188,63 @@ a{
 .button a:hover{
     color: #c1c1c1;
 }
+
+/* .section-white__text{
+    padding-top: 30px;
+    display: block;
+    margin: 0 auto;
+    max-width: 260px;    
+} */
+
+
+.section-white-small{
+    padding: 30px 0 15px 0;
+    display: block;
+    max-width: 550px;
+    margin: 0 auto;
+}
+
+
+.section-white__img {
+    width: 60%;
+    margin: 0 auto;
+}
+
+
+@media only screen and (min-width: 576px) {
+    
+    .text{
+        margin: 0 auto;
+        max-width: 476px;
+    }
+    .section-white__text{
+        display: flex;
+        margin: 0 auto;
+        width: 360px; 
+    }
+    .section-white__img{
+        /* display: flex;
+        vertical-align: top; */
+        width: 90%;
+        margin: 0 auto;
+    }
+   
+  }
+
 @media only screen and (max-width: 650px) {
+    .title{
+        max-width: 650px;
+    }
+
+    .subsribe h3{
+        max-width: 350px;
+        margin: 0 auto;
+    }
+    .section-white__img{
+        /* display: flex;
+        vertical-align: top; */
+        width: 90%;
+    }
     .navbar__menu li{
         display: flex;
         flex-direction: row;
@@ -183,10 +253,20 @@ a{
         padding: 15px 30px 30px 30px;
     }
     .section-white-small{
-        padding: 30px 80px 15px 80px;
+        padding: 30px 0 15px 0;
+        display: block;
+        max-width: 550px;
+        margin: 0 auto;
     }
-    .section-purple{
-        padding: 30px;
+    .section-white__text {
+        display: flex;
+        margin: 0 auto;
+        width: 400px;
+    }
+
+    .text{
+       max-width: 550px;
+       margin: 0 auto;
     }
     .footer__list li{
         display: flex;
@@ -194,19 +274,85 @@ a{
     }
   }
 
-  @media only screen and (min-width: 900px) {
+
+
+
+  @media only screen and (min-width: 768px) {
+
+    .subsribe h3{
+        max-width: 760px;
+        margin: 0 auto;
+    }
+    .title{
+        max-width: 760px;
+    }
+    .text{   
+        margin: 0 auto;     
+        max-width: 668px;
+        
+    }
+  
+  .section-white__text{
+    display: flex;
+    margin: 0 auto;
+    width: 440px; 
+    }
+}
+  @media only screen and (min-width: 992px) {
     .section-white-small {
         display: flex;
+        max-width: 880px;
+        margin: 0 auto;
     }
 
     .section-white__text{
         display: flex;
-        width: 60%; 
+        margin: 0 auto;
+        width: 780px; 
+        padding-top: 0px;
+        padding-left: 20px;
     }
 
     .section-white__img{
         /* display: flex;
         vertical-align: top; */
-        width: 40%;
+        width: 50%;
     }
+
+    .text{
+        max-width: 892px;
+        margin: 0 auto;
+    }
+  }
+
+  @media only screen and (min-width: 1200px) {
+    .text{
+        padding-top: 0px;
+        margin: 0 auto;
+        max-width: 1100px;
+        padding-left: 0px;
+    }
+
+    .section-white-small {
+        display: flex;
+        max-width: 1100px;
+        margin: 0 auto;
+    }
+    .section-white__img {
+        width: 50%;
+    }
+  }
+
+  @media only screen and (min-width: 1400px) {
+    .text{
+        margin: 0 auto;
+        max-width: 1300px;
+        
+    }
+    .section-white-small {
+        display: flex;
+        max-width: 1300px;
+        margin: 0 auto;
+    }
+    
   }
